<resources>
    <string name="app_name">SampleProject</string>
    <string name="id_hint">Enter your id</string>
    <string name="hint_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="register_message">New user ? Click here to register.</string>
    <string name="registration_done">You have registered successfully.Click here to login</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_contact">Enter your phone number</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">UserInfo</string>
    <string name="menu_slideshow">Contacts</string>
</resources>