<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.RegisterUserActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/size_30dp">

            <ImageView
                android:id="@+id/img_lock"
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:src="@drawable/user"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/register_edt_userid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_30dp"
                android:hint="@string/id_hint"
                android:padding="@dimen/size_20dp"
                android:textSize="@dimen/text_default"
                app:layout_constraintTop_toBottomOf="@id/img_lock" />

            <EditText
                android:id="@+id/register_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:hint="@string/hint_password"
                android:padding="@dimen/size_20dp"
                android:textSize="@dimen/text_default"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/register_edt_userid" />
            <EditText
                android:id="@+id/register_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:hint="@string/hint_email"
                android:padding="@dimen/size_20dp"
                android:textSize="@dimen/text_default"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@id/register_edt_password" />
            <EditText
                android:id="@+id/register_edt_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:hint="@string/hint_contact"
                android:padding="@dimen/size_20dp"
                android:textSize="@dimen/text_default"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/register_edt_email" />
            <Button
                android:id="@+id/register_btnregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_20dp"
                android:text="@string/register"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register_edt_contact" />

            <TextView
                android:id="@+id/register_tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/logo_size"
                android:gravity="center"
                android:text="@string/registration_done"
                android:textSize="@dimen/text_default"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>